--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="./css./main.css">
   <meta name="description" content="En INC Tattoo encontrarás los mejores insumos
   para el tatuador profesional o principiante.">
-  <meta>
-  <link rel="stylesheet" href="./css./main.css">
+  <meta name="keywords" content="TATTOO INSUMOS TATUAJES">
   <title>Insumos para tatuar</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
@@ -39,7 +39,7 @@
 
   </header>
 
-
+<article class="fondo">
   <!----------------INICIO---------------------------->
   <section class="section1 pt-5">
     <h1 class="h1 text">Inc Tattoo</h1>
@@ -50,13 +50,14 @@
 
   <a href="#" class="float" target="_blank">
     <i class="bi bi-whatsapp my-float"></i>
-    </a>
+  </a>
   <!----------------------SECCION NOSOTROS------------------>
   <section class="sectionosotros text-bg-dark p-3 text-center">
     <h3 class="text">Sobre Nosotros</h3>
     <hr>
-    <p>Somos una empresa dedicada a la venta de insumos para tatuadores.
-      Si buscás precio y calidad, ¡no dudes en contactarnos!</p>
+    <p class="p">Somos una empresa con mas de 10 años de experiencia, dedicada a la venta de insumos para tatuadores.
+     <br> Si buscás precio y calidad, INC Tattoo tiene todo lo que necesitas <br>
+      <strong>¡no dudes en contactarnos!</strong></p>
 
   </section>
 
@@ -64,29 +65,29 @@
   <section>
     <h2 class="text-center text pt-3">Nuestros Productos</h2>
     <hr>
-    <p class="text-center fs-5">Te presentamos nuestros diferentes productos para principiantes
+    <p class="text-center fs-4">Te presentamos nuestros diferentes productos para principiantes
       y profesionales:
     </p>
 
-    <article class="galeria1">
+    <article class="row justify-content-center galeria1">
 
-      <img class="img1" src="./images/maquina1.jpg" alt="maquina de tatuar">
+      <img class="col-3 mx-5 my-3" src="./images/maquina1.jpg" alt="maquina de tatuar">
 
-      <img class="img2" src="./images/maquina2.jpg" alt="maquina2">
+      <img class="col-3 mx-5 my-3" src="./images/maquina2.jpg" alt="maquina2">
 
-      <img class="img3" src="./images/descartadores.png" alt="descartadores">
+      <img class="col-3 mx-5 my-3" src="./images/descartadores.png" alt="descartadores">
 
-      <img class="img4" src="./images/s-l300.jpg" alt="kit1">
+      <img class="col-3 mx-5 my-3" src="./images/s-l300.jpg" alt="kit1">
 
-      <img class="img5" src="./images/kit2.jpg" alt="kit2">
+      <img class="col-3 mx-5 my-3" src="./images/kit2.jpg" alt="kit2">
 
-      <img class="img6" src="./images/kit3.jpg" alt="kit3">
+      <img class="col-3 mx-5 my-3" src="./images/kit3.jpg" alt="kit3">
 
-      <img class="img7" src="./images/tintas1.jpg" alt="tintas">
+      <img class="col-3 mx-5 my-3" src="./images/tintas1.jpg" alt="tintas">
 
-      <img class="img8" src="./images/tintas2.jpg" alt="tinta2">
+      <img class="col-3 mx-5 my-3" src="./images/tintas2.jpg" alt="tinta2">
 
-      <img class="img9" src="./images/tintas3.jpg" alt="tinta3">
+      <img class="col-3 mx-5 my-3" src="./images/tintas3.jpg" alt="tinta3">
 
     </article>
 
@@ -94,16 +95,16 @@
   </section>
 
   <!-------------------------otra seccion------------>
-  <h2 class="text-center pt-5 text">¿Conoces nuestros cursos y seminarios?</h2>
+  <h2 class="text-center pt-5 text">¿Queres conoces nuestros cursos y seminarios?</h2>
   <hr>
-  <p class="text-center">Cursos para principiantes y seminarios para tatuadores!
-    Conocelos hoy:
+  <p class="text-center fs-5">Cursos para principiantes y seminarios para tatuadores!
+    <br><strong class="mt-3 fs-3">Únete hoy!</strong>
   </p>
 
   <!---------------------TARJETAS----------------------->
 
-  <article class="tarjetas row">
-    <div class="col-6 card mx-5" style="width: 18rem;">
+  <article class="tarjetas row d-flex justify-content-center">
+    <div class="col-7 col-3-sm card mx-5" style="width: 18rem;">
       <img src="./images/cursos_seminarios_2.jpg" class="card-img-top" alt="...">
       <div class="card-body">
         <h5 class="card-title text-center">Únete a nuestros seminarios!</h5>
@@ -113,7 +114,7 @@
       </div>
     </div>
 
-    <div class="col-6 card mx-5" style="width: 18rem;">
+    <div class="col-7 col-3-sm  card mx-5" style="width: 18rem;">
       <img src="./images/Foto-Antonio-L-Juarez-Reportaje-en-el-estudio-CocaineTattoo-de-Granada-5.jpg"
         class="card-img-top" alt="...">
       <div class="card-body">
@@ -129,7 +130,7 @@
 
 
   <!---------------------FORMULARIO---------------------------------->
-  <section class="formulario m-5 border border-3 rounded-3">
+  <section class="formulario m-3 border border-3 rounded-3">
     <h3 class="text-center fs-1 text pt-3">Contactanos!</h3>
     <hr>
     <h5 class="text-center">Te respondemos a la mayor brevedad posible. Muchas gracias!</h5>
@@ -159,22 +160,52 @@
     <button type="submit" class="btn-form my-3">Enviar</button>
   </section>
 
-
+</article>
   <!------------------------FOOTER-------------------------------->
   <section class="row footer">
-    <h1 class="col-3 text-center text ">Inc Tattoo</h1>
+    <h1 class="text-center text ">Inc Tattoo</h1>
     <hr>
-    <div class="col-7" id="iconos">
-      <h5 class="text-center text">Seguinos en nuestras redes</h5>
-      <a href=""><i class="bi bi-facebook"></i></a>
-      <a href=""><i class="bi bi-twitter"></i></a>
-      <a href=""><i class="bi bi-instagram"></i></a>
-    </div>
 
+      <div class="row d-flex justify-content-center" id="iconos">
 
+        <!---whatsapp---------------------------------->
+        <svg xmlns="http://www.w3.org/2000/svg" class=" col-1 icon icon-tabler icon-tabler-brand-whatsapp" width="50"
+          height="50" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round"
+          stroke-linejoin="round">
+          <path stroke="none" d="M0 0h24v24H0z" fill="none"></path>
+          <path d="M3 21l1.65 -3.8a9 9 0 1 1 3.4 2.9l-5.05 .9"></path>
+          <path d="M9 10a0.5 .5 0 0 0 1 0v-1a0.5 .5 0 0 0 -1 0v1a5 5 0 0 0 5 5h1a0.5 .5 0 0 0 0 -1h-1a0.5 .5 0 0 0 0 1">
+          </path>
+        </svg>
+        <!----facebook--------------------------------->
+        <svg xmlns="http://www.w3.org/2000/svg" class="col-1 icon icon-tabler icon-tabler-brand-twitter" width="50" height="50" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round">
+          <path stroke="none" d="M0 0h24v24H0z" fill="none"></path>
+          <path d="M22 4.01c-1 .49 -1.98 .689 -3 .99c-1.121 -1.265 -2.783 -1.335 -4.38 -.737s-2.643 2.06 -2.62 3.737v1c-3.245 .083 -6.135 -1.395 -8 -4c0 0 -4.182 7.433 4 11c-1.872 1.247 -3.739 2.088 -6 2c3.308 1.803 6.913 2.423 10.034 1.517c3.58 -1.04 6.522 -3.723 7.651 -7.742a13.84 13.84 0 0 0 .497 -3.753c-.002 -.249 1.51 -2.772 1.818 -4.013z"></path>
+       </svg>
 
+        <!---twitch---------------------------->
+        <svg xmlns="http://www.w3.org/2000/svg" class="col-1 icon icon-tabler icon-tabler-brand-twitch" width="50"
+          height="50" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round"
+          stroke-linejoin="round">
+          <path stroke="none" d="M0 0h24v24H0z" fill="none"></path>
+          <path
+            d="M4 5v11a1 1 0 0 0 1 1h2v4l4 -4h5.584c.266 0 .52 -.105 .707 -.293l2.415 -2.414c.187 -.188 .293 -.442 .293 -.708v-8.585a1 1 0 0 0 -1 -1h-14a1 1 0 0 0 -1 1z">
+          </path>
+          <line x1="16" y1="8" x2="16" y2="12"></line>
+          <line x1="12" y1="8" x2="12" y2="12"></line>
+        </svg>
+        <!-----instragram-->
+        <svg xmlns="http://www.w3.org/2000/svg" class="col-1 icon icon-tabler icon-tabler-brand-instagram" width="50" height="50" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round">
+          <path stroke="none" d="M0 0h24v24H0z" fill="none"></path>
+          <rect x="4" y="4" width="16" height="16" rx="4"></rect>
+          <circle cx="12" cy="12" r="3"></circle>
+          <line x1="16.5" y1="7.5" x2="16.5" y2="7.501"></line>
+       </svg>
+      </div>
+      <p class="text-center pt-4 fs-4">Nos ubicamos en av.San Martin 555</p>
 
-
+      <p class="text-center">incTattoo@derechodeautor 2022</p>
+    
 
   </section>
 
