--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -84,28 +84,66 @@
     <button type="submit" class="btn-form my-3">Enviar</button>
   </section>
 
-  <article class="borderHorarios border border-3 rounded-3">
+  <article class="borderHorarios border border-3 rounded-3 bg-secondary">
     <h2 class="text-center">HORARIOS DE ATENCION</h2><br>
-    <p>Lunes a Viernes de 8hs a 20hs <br>
+    <p class="text-center fs-4">Lunes a Viernes de 8hs a 20hs <br>
       Sabados y feriados de 10hs a 18hs</p>
   </article>
 
-  <!------------------------FOOTER-------------------------------->
-  <section class="row footer">
-    <h1 class="col-3">Inc Tattoo</h1>
-    <hr>
-    <div class="col-7" id="iconos">
-      <h5 class="">Seguinos en nuestras redes</h5>
-      <a href=""><i class="bi bi-facebook"></i></a>
-      <a href=""><i class="bi bi-twitter"></i></a>
-      <a href=""><i class="bi bi-instagram"></i></a>
+  
+ <!------------------------FOOTER-------------------------------->
+ <section class="row footer">
+  <h1 class="text-center text ">Inc Tattoo</h1>
+  <hr class="blueviolet">
+
+    <div class="row d-flex justify-content-center pt-3" id="iconos">
+
+      <!---whatsapp---------------------------------->
+      <svg xmlns="http://www.w3.org/2000/svg" class=" col-1 icon icon-tabler icon-tabler-brand-whatsapp" width="50"
+        height="50" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round"
+        stroke-linejoin="round">
+        <path stroke="none" d="M0 0h24v24H0z" fill="none"></path>
+        <path d="M3 21l1.65 -3.8a9 9 0 1 1 3.4 2.9l-5.05 .9"></path>
+        <path d="M9 10a0.5 .5 0 0 0 1 0v-1a0.5 .5 0 0 0 -1 0v1a5 5 0 0 0 5 5h1a0.5 .5 0 0 0 0 -1h-1a0.5 .5 0 0 0 0 1">
+        </path>
+      </svg>
+      <!----facebook--------------------------------->
+      <svg xmlns="http://www.w3.org/2000/svg" class="col-1 icon icon-tabler icon-tabler-brand-twitter" width="50" height="50" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round">
+        <path stroke="none" d="M0 0h24v24H0z" fill="none"></path>
+        <path d="M22 4.01c-1 .49 -1.98 .689 -3 .99c-1.121 -1.265 -2.783 -1.335 -4.38 -.737s-2.643 2.06 -2.62 3.737v1c-3.245 .083 -6.135 -1.395 -8 -4c0 0 -4.182 7.433 4 11c-1.872 1.247 -3.739 2.088 -6 2c3.308 1.803 6.913 2.423 10.034 1.517c3.58 -1.04 6.522 -3.723 7.651 -7.742a13.84 13.84 0 0 0 .497 -3.753c-.002 -.249 1.51 -2.772 1.818 -4.013z"></path>
+     </svg>
+
+      <!---twitch---------------------------->
+      <svg xmlns="http://www.w3.org/2000/svg" class="col-1 icon icon-tabler icon-tabler-brand-twitch" width="50"
+        height="50" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round"
+        stroke-linejoin="round">
+        <path stroke="none" d="M0 0h24v24H0z" fill="none"></path>
+        <path
+          d="M4 5v11a1 1 0 0 0 1 1h2v4l4 -4h5.584c.266 0 .52 -.105 .707 -.293l2.415 -2.414c.187 -.188 .293 -.442 .293 -.708v-8.585a1 1 0 0 0 -1 -1h-14a1 1 0 0 0 -1 1z">
+        </path>
+        <line x1="16" y1="8" x2="16" y2="12"></line>
+        <line x1="12" y1="8" x2="12" y2="12"></line>
+      </svg>
+      <!-----instragram-->
+      <svg xmlns="http://www.w3.org/2000/svg" class="col-1 icon icon-tabler icon-tabler-brand-instagram" width="50" height="50" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round">
+        <path stroke="none" d="M0 0h24v24H0z" fill="none"></path>
+        <rect x="4" y="4" width="16" height="16" rx="4"></rect>
+        <circle cx="12" cy="12" r="3"></circle>
+        <line x1="16.5" y1="7.5" x2="16.5" y2="7.501"></line>
+     </svg>
     </div>
+    <p class="text-center pt-4 fs-4">Nos ubicamos en av.San Martin 555</p>
+
+    <p class="text-center">incTattoo@derechodeautor 2022</p>
+  
 
 
 
 
 
-  </section>
+
+</section>
+
 
 
 
