--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -44,6 +44,8 @@
     <p class="text-light fs-4 text-center">Insumos para tatuadores</p>
 
   </section>
+
+  <article class="fondo">
   <!----------------------SECCION NOSOTROS------------------>
   <section class="sectionosotros text-bg-dark p-3 text-center">
     <h3>Sobre Nosotros</h3>
@@ -138,16 +140,8 @@
   
 
 
-
-
-
-
 </section>
-
-
-
-
-
+</article>
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2"
